feat: Introduce `srm_colab.ipynb` to enable running the SRM Streamlit app in Google Colab.

--- a/SRM_App/srm_colab.ipynb
+++ b/SRM_App/srm_colab.ipynb
@@ -6,31 +6,17 @@
             "source": [
                 "# 🏭 SAP SRM - Advanced Procurement Simulation\n",
                 "\n",
-                "**Run the Full Streamlit App in Google Colab**\n",
+                "**Run the Full Streamlit App in Google Colab (Zero-Config)**\n",
                 "\n",
-                "This notebook runs the complete SRM Streamlit application directly in Google Colab using ngrok tunneling.\n",
-                "\n",
-                "## 📋 Game Overview:\n",
-                "- **Objective**: Manage procurement to meet production demands while minimizing total cost\n",
-                "- **Duration**: 30 days\n",
-                "- **Starting Inventory**: 500 units\n",
-                "- **Starting Cash**: $50,000\n",
-                "\n",
-                "## 💡 Key Features:\n",
-                "1. **Procurement Cockpit**: Monitor inventory, POs, costs, and daily events\n",
-                "2. **MRP & Planning**: View production schedule and place orders\n",
-                "3. **Sourcing Master**: Track supplier performance and relationships\n",
-                "4. **Financials**: Manage invoices and maintain supplier relationships\n",
+                "This notebook runs the complete SRM Streamlit application directly in Google Colab using Localtunnel.\n",
                 "\n",
                 "## 🎮 How to Use:\n",
-                "1. Run all cells in order (this takes about 30 seconds)\n",
-                "2. Click the ngrok URL that appears\n",
-                "3. The full Streamlit app will open in a new tab\n",
-                "4. Play the game using the complete interface!\n",
+                "1. Run Step 1 & 2 to download files and install dependencies.\n",
+                "2. Run Step 3 to get your **Endpoint IP** (you will need this as a password).\n",
+                "3. Run Step 4 to start the app and click the **Localtunnel URL**.\n",
+                "4. When the page opens, paste your **Endpoint IP** into the box to start your session.\n",
                 "\n",
-                "---\n",
-                "\n",
-                "**Note**: The app will stay running as long as this notebook is active. You can close the tab and reopen it using the same URL."
+                "---\n"
             ]
         },
         {
@@ -39,17 +25,12 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Step 1: Download the SRM app files from GitHub\n",
+                "# Step 1: Download the SRM app files\n",
                 "print(\"📥 Downloading SRM app files...\")\n",
-                "\n",
                 "!wget -q https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/SRM_App/app.py\n",
                 "!wget -q https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/SRM_App/logic.py\n",
                 "!wget -q https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/SRM_App/data.py\n",
-                "\n",
-                "print(\"✅ Files downloaded successfully!\")\n",
-                "print(\"   • app.py\")\n",
-                "print(\"   • logic.py\")\n",
-                "print(\"   • data.py\")"
+                "print(\"✅ Files downloaded!\")"
             ]
         },
         {
@@ -58,15 +39,10 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Step 2: Install required packages\n",
-                "print(\"📦 Installing required packages...\")\n",
-                "\n",
-                "!pip install -q streamlit pyngrok altair\n",
-                "\n",
-                "print(\"✅ Packages installed!\")\n",
-                "print(\"   • streamlit\")\n",
-                "print(\"   • pyngrok (for tunneling)\")\n",
-                "print(\"   • altair (for charts)\")"
+                "# Step 2: Install dependencies\n",
+                "print(\"📦 Installing Streamlit...\")\n",
+                "!pip install -q streamlit altair\n",
+                "print(\"✅ Installed!\")"
             ]
         },
         {
@@ -75,16 +51,10 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Step 3: Set up ngrok authentication (optional but recommended)\n",
-                "# Get your free authtoken from: https://dashboard.ngrok.com/get-started/your-authtoken\n",
-                "# Uncomment and add your token below for a more stable connection:\n",
-                "\n",
-                "# from pyngrok import ngrok\n",
-                "# ngrok.set_auth_token(\"YOUR_NGROK_TOKEN_HERE\")\n",
-                "\n",
-                "print(\"ℹ️  Ngrok setup:\")\n",
-                "print(\"   You can use ngrok without a token (time-limited sessions)\")\n",
-                "print(\"   Or get a free token at: https://dashboard.ngrok.com/get-started/your-authtoken\")"
+                "# Step 3: Get your Endpoint IP (Password for Localtunnel)\n",
+                "print(\"🔑 YOUR ENDPOINT IP IS:\")\n",
+                "!wget -qO- ipv4.icanhazip.com\n",
+                "print(\"\\n👆 Copy this number! You will need to paste it when you click the link in the next step.\")"
             ]
         },
         {
@@ -93,45 +63,19 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Step 4: Start the Streamlit app with ngrok tunnel\n",
-                "from pyngrok import ngrok\n",
+                "# Step 4: Start Streamlit and Localtunnel\n",
                 "import subprocess\n",
                 "import time\n",
                 "\n",
-                "print(\"🚀 Starting Streamlit app...\")\n",
-                "print(\"\")\n",
+                "print(\"🚀 Starting Streamlit app in background...\")\n",
+                "# Run streamlit on port 8501\n",
+                "subprocess.Popen([\"streamlit\", \"run\", \"app.py\", \"--server.port\", \"8501\", \"--server.address\", \"0.0.0.0\"])\n",
                 "\n",
-                "# Kill any existing ngrok tunnels\n",
-                "ngrok.kill()\n",
+                "print(\"🌐 Opening tunnel...\")\n",
+                "time.sleep(3)\n",
                 "\n",
-                "# Start Streamlit in the background\n",
-                "process = subprocess.Popen(\n",
-                "    [\"streamlit\", \"run\", \"app.py\", \"--server.port\", \"8501\"],\n",
-                "    stdout=subprocess.PIPE,\n",
-                "    stderr=subprocess.PIPE\n",
-                ")\n",
-                "\n",
-                "# Wait for Streamlit to start\n",
-                "time.sleep(5)\n",
-                "\n",
-                "# Create ngrok tunnel\n",
-                "public_url = ngrok.connect(8501)\n",
-                "\n",
-                "print(\"✅ Streamlit app is running!\")\n",
-                "print(\"\")\n",
-                "print(\"=\"*70)\n",
-                "print(\"🌐 OPEN THIS URL IN A NEW TAB:\")\n",
-                "print(f\"   {public_url}\")\n",
-                "print(\"=\"*70)\n",
-                "print(\"\")\n",
-                "print(\"📝 Instructions:\")\n",
-                "print(\"   1. Click the URL above (or copy-paste to browser)\")\n",
-                "print(\"   2. The full SRM app will open\")\n",
-                "print(\"   3. Navigate using the sidebar modules\")\n",
-                "print(\"   4. Click 'NEXT DAY' to advance the simulation\")\n",
-                "print(\"\")\n",
-                "print(\"⚠️  Keep this notebook running to keep the app alive!\")\n",
-                "print(\"   Do not interrupt this cell or the app will stop.\")"
+                "# Use npx localtunnel to expose the port\n",
+                "!npx localtunnel --port 8501"
             ]
         },
         {
@@ -139,113 +83,15 @@
             "metadata": {},
             "source": [
                 "---\n",
+                "## 💡 Troubleshooting\n",
+                "**Localtunnel is asking for a password?**\n",
+                "- This is for security. Paste the IP address from **Step 3** into the field and click 'Submit' or 'Click to Continue'.\n",
                 "\n",
-                "## 🎮 Using the App:\n",
+                "**The link isn't appearing?**\n",
+                "- Sometimes it takes a few seconds. If it fails, stop the cell and run Step 4 again.\n",
                 "\n",
-                "Once you open the URL above, you'll have access to 4 modules:\n",
-                "\n",
-                "### 1. 🚀 Procurement Cockpit\n",
-                "- View KPIs: Inventory, Open POs, Quality Costs, Stockout Penalties\n",
-                "- Monitor daily events and production targets\n",
-                "- Track inbound deliveries\n",
-                "\n",
-                "### 2. 📅 MRP & Planning\n",
-                "- View 30-day production demand forecast\n",
-                "- Place orders with different suppliers\n",
-                "- Validate orders before committing\n",
-                "\n",
-                "### 3. 🏭 Sourcing Master\n",
-                "- Track supplier performance metrics\n",
-                "- Compare actual vs. quoted specs\n",
-                "- Monitor relationship scores\n",
-                "\n",
-                "### 4. 💰 Financials\n",
-                "- View unpaid invoices\n",
-                "- Pay invoices to maintain relationships\n",
-                "- Track supplier trust scores\n",
-                "\n",
-                "---\n",
-                "\n",
-                "## 📊 Supplier Overview:\n",
-                "\n",
-                "| Supplier | Category | Price | Lead Time | Min Order | Trade-off |\n",
-                "|----------|----------|-------|-----------|-----------|------------|\n",
-                "| **CheapSource Ltd** | Budget | $10 | 3 days | 100 | Low cost, quality issues |\n",
-                "| **ReliaTech Inc** | Premium | $15 | 2 days | 50 | High quality, expensive |\n",
-                "| **SpeedyParts Co** | Fast | $12 | 1 day | 75 | Fast delivery, some defects |\n",
-                "| **BulkDirect** | Volume | $8 | 4 days | 200 | Cheapest, high MOQ |\n",
-                "\n",
-                "---\n",
-                "\n",
-                "## 💡 Pro Tips:\n",
-                "\n",
-                "1. **Plan Ahead**: Check the MRP forecast to anticipate demand\n",
-                "2. **Validate Orders**: Use the Validate button to review before committing cash\n",
-                "3. **Pay On Time**: Invoice payments affect supplier relationships\n",
-                "4. **Track Performance**: Use Sourcing Master to see actual vs. promised specs\n",
-                "5. **Avoid Stockouts**: They cost $50 per unit!\n",
-                "6. **Balance Inventory**: Storage costs $2/unit/day\n",
-                "\n",
-                "---\n",
-                "\n",
-                "## 🔧 Troubleshooting:\n",
-                "\n",
-                "**App not loading?**\n",
-                "- Wait 10 seconds and refresh the ngrok URL\n",
-                "- Make sure the cell above is still running\n",
-                "\n",
-                "**Session expired?**\n",
-                "- Free ngrok sessions have time limits\n",
-                "- Sign up for a free ngrok token for longer sessions\n",
-                "\n",
-                "**Want to restart?**\n",
-                "- Interrupt the cell above (stop button)\n",
-                "- Run it again to get a new URL\n",
-                "\n",
-                "---\n",
-                "\n",
-                "## 📥 Exporting Data:\n",
-                "\n",
-                "At the end of the game (Day 30):\n",
-                "1. Go to the sidebar in the app\n",
-                "2. Click **\"📥 Download Transaction Log\"**\n",
-                "3. Analyze the CSV data for insights\n",
-                "\n",
-                "You can also generate 100-order historical data for practice!\n",
-                "\n",
-                "---\n",
-                "\n",
-                "**Good luck with your procurement challenge! 🍀**"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Optional: View ngrok tunnels and their status\n",
-                "from pyngrok import ngrok\n",
-                "\n",
-                "print(\"Active ngrok tunnels:\")\n",
-                "tunnels = ngrok.get_tunnels()\n",
-                "for tunnel in tunnels:\n",
-                "    print(f\"  • {tunnel.public_url} -> {tunnel.config['addr']}\")"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Optional: Stop the app (run this when you're done)\n",
-                "# Uncomment to stop:\n",
-                "\n",
-                "# print(\"Stopping Streamlit app...\")\n",
-                "# process.terminate()\n",
-                "# ngrok.kill()\n",
-                "# print(\"✅ App stopped.\")"
+                "**App crashed?**\n",
+                "- Make sure you ran Step 1 to download the logic files!"
             ]
         }
     ],
