feat: Add Google Colab notebook for running SRM Streamlit application.

--- a/SRM_App/srm_colab.ipynb
+++ b/SRM_App/srm_colab.ipynb
@@ -1,119 +1,105 @@
 {
-    "cells": [
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "# 🏭 SAP SRM - Advanced Procurement Simulation\n",
-                "\n",
-                "**Run the Full Streamlit App in Google Colab (Zero-Config)**\n",
-                "\n",
-                "This notebook runs the complete SRM Streamlit application directly in Google Colab using Localtunnel.\n",
-                "\n",
-                "## 🎮 How to Use:\n",
-                "1. Run Step 1 & 2 to download files and install dependencies.\n",
-                "2. Run Step 3 to get your **Endpoint IP** (you will need this as a password).\n",
-                "3. Run Step 4 to start the app and click the **Localtunnel URL**.\n",
-                "4. When the page opens, paste your **Endpoint IP** into the box to start your session.\n",
-                "\n",
-                "---\n"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Step 1: Download the SRM app files\n",
-                "print(\"📥 Downloading SRM app files...\")\n",
-                "!wget -q https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/SRM_App/app.py\n",
-                "!wget -q https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/SRM_App/logic.py\n",
-                "!wget -q https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/SRM_App/data.py\n",
-                "print(\"✅ Files downloaded!\")"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Step 2: Install dependencies\n",
-                "print(\"📦 Installing Streamlit...\")\n",
-                "!pip install -q streamlit altair\n",
-                "print(\"✅ Installed!\")"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Step 3: Get your Endpoint IP (Password for Localtunnel)\n",
-                "print(\"🔑 YOUR ENDPOINT IP IS:\")\n",
-                "!wget -qO- ipv4.icanhazip.com\n",
-                "print(\"\\n👆 Copy this number! You will need to paste it when you click the link in the next step.\")"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Step 4: Start Streamlit and Localtunnel\n",
-                "import subprocess\n",
-                "import time\n",
-                "\n",
-                "print(\"🚀 Starting Streamlit app in background...\")\n",
-                "# Run streamlit on port 8501\n",
-                "subprocess.Popen([\"streamlit\", \"run\", \"app.py\", \"--server.port\", \"8501\", \"--server.address\", \"0.0.0.0\"])\n",
-                "\n",
-                "print(\"🌐 Opening tunnel...\")\n",
-                "time.sleep(3)\n",
-                "\n",
-                "# Use npx localtunnel to expose the port\n",
-                "!npx localtunnel --port 8501"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "---\n",
-                "## 💡 Troubleshooting\n",
-                "**Localtunnel is asking for a password?**\n",
-                "- This is for security. Paste the IP address from **Step 3** into the field and click 'Submit' or 'Click to Continue'.\n",
-                "\n",
-                "**The link isn't appearing?**\n",
-                "- Sometimes it takes a few seconds. If it fails, stop the cell and run Step 4 again.\n",
-                "\n",
-                "**App crashed?**\n",
-                "- Make sure you ran Step 1 to download the logic files!"
-            ]
-        }
-    ],
-    "metadata": {
-        "kernelspec": {
-            "display_name": "Python 3",
-            "language": "python",
-            "name": "python3"
-        },
-        "language_info": {
-            "codemirror_mode": {
-                "name": "ipython",
-                "version": 3
-            },
-            "file_extension": ".py",
-            "mimetype": "text/x-python",
-            "name": "python",
-            "nbconvert_exporter": "python",
-            "pygments_lexer": "ipython3",
-            "version": "3.8.0"
-        }
-    },
-    "nbformat": 4,
-    "nbformat_minor": 4
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 🏭 SAP SRM - Advanced Procurement Simulation\n",
+    "\n",
+    "**Run the Full App via Google's High-Speed Proxy**\n",
+    "\n",
+    "This method is the most reliable and fastest way to run Streamlit in Colab. It uses Google's internal networking to serve the app directly.\n",
+    "\n",
+    "## 🎮 How to Use:\n",
+    "1. Run the **Installation** cell.\n",
+    "2. Run the **Start Application** cell.\n",
+    "3. Click the **'Open App'** link that appears at the bottom of the cell.\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1: Installation and File Download\n",
+    "import os\n",
+    "print(\"📥 Downloading SRM app files...\")\n",
+    "!wget -q https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/SRM_App/app.py\n",
+    "!wget -q https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/SRM_App/logic.py\n",
+    "!wget -q https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/SRM_App/data.py\n",
+    "\n",
+    "print(\"📦 Installing Streamlit...\")\n",
+    "!pip install -q streamlit\n",
+    "print(\"✅ Setup Complete!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2: Start Application\n",
+    "from google.colab import output\n",
+    "import subprocess\n",
+    "import time\n",
+    "\n",
+    "# 1. Port settings\n",
+    "PORT = 8501\n",
+    "\n",
+    "# 2. Start Streamlit in the background\n",
+    "print(\"🚀 Starting Streamlit server...\")\n",
+    "process = subprocess.Popen([\n",
+    "    \"streamlit\", \"run\", \"app.py\", \n",
+    "    \"--server.port\", str(PORT), \n",
+    "    \"--server.address\", \"localhost\", \n",
+    "    \"--server.headless\", \"true\",\n",
+    "    \"--browser.gatherUsageStats\", \"false\"\n",
+    "])\n",
+    "\n",
+    "# 3. Wait for server to initialize\n",
+    "time.sleep(4)\n",
+    "\n",
+    "# 4. Serve the port as a window link\n",
+    "print(\"\\n✨ SERVER READY!\")\n",
+    "print(\"Click the link below to open your SRM Simulation:\")\n",
+    "output.serve_kernel_port_as_window(PORT)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 💡 Tips\n",
+    "- **Instant Updates**: If you change the code in `app.py` inside Colab, just refresh the app window.\n",
+    "- **Headless Mode**: The app runs in the background. You don't need to keep the cell output expanded.\n",
+    "- **Restarting**: If the app stops responding, go to `Runtime` -> `Restart session`, then run the cells again."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
