feat: add Google Colab notebook for running the SRM simulation application.

--- a/SRM_App/srm_colab.ipynb
+++ b/SRM_App/srm_colab.ipynb
@@ -1,105 +1,105 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 🏭 SAP SRM - Advanced Procurement Simulation\n",
-    "\n",
-    "**Run the Full App via Google's High-Speed Proxy**\n",
-    "\n",
-    "This method is the most reliable and fastest way to run Streamlit in Colab. It uses Google's internal networking to serve the app directly.\n",
-    "\n",
-    "## 🎮 How to Use:\n",
-    "1. Run the **Installation** cell.\n",
-    "2. Run the **Start Application** cell.\n",
-    "3. Click the **'Open App'** link that appears at the bottom of the cell.\n",
-    "\n",
-    "---\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 1: Installation and File Download\n",
-    "import os\n",
-    "print(\"📥 Downloading SRM app files...\")\n",
-    "!wget -q https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/SRM_App/app.py\n",
-    "!wget -q https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/SRM_App/logic.py\n",
-    "!wget -q https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/SRM_App/data.py\n",
-    "\n",
-    "print(\"📦 Installing Streamlit...\")\n",
-    "!pip install -q streamlit\n",
-    "print(\"✅ Setup Complete!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 2: Start Application\n",
-    "from google.colab import output\n",
-    "import subprocess\n",
-    "import time\n",
-    "\n",
-    "# 1. Port settings\n",
-    "PORT = 8501\n",
-    "\n",
-    "# 2. Start Streamlit in the background\n",
-    "print(\"🚀 Starting Streamlit server...\")\n",
-    "process = subprocess.Popen([\n",
-    "    \"streamlit\", \"run\", \"app.py\", \n",
-    "    \"--server.port\", str(PORT), \n",
-    "    \"--server.address\", \"localhost\", \n",
-    "    \"--server.headless\", \"true\",\n",
-    "    \"--browser.gatherUsageStats\", \"false\"\n",
-    "])\n",
-    "\n",
-    "# 3. Wait for server to initialize\n",
-    "time.sleep(4)\n",
-    "\n",
-    "# 4. Serve the port as a window link\n",
-    "print(\"\\n✨ SERVER READY!\")\n",
-    "print(\"Click the link below to open your SRM Simulation:\")\n",
-    "output.serve_kernel_port_as_window(PORT)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## 💡 Tips\n",
-    "- **Instant Updates**: If you change the code in `app.py` inside Colab, just refresh the app window.\n",
-    "- **Headless Mode**: The app runs in the background. You don't need to keep the cell output expanded.\n",
-    "- **Restarting**: If the app stops responding, go to `Runtime` -> `Restart session`, then run the cells again."
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.0"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+    "cells": [
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "# 🏭 SAP SRM - Advanced Procurement Simulation\n",
+                "\n",
+                "**Run the Full App directly inside this Notebook**\n",
+                "\n",
+                "This method uses Google's native iframe serving. The application will appear directly below the code cell.\n",
+                "\n",
+                "## 🎮 How to Use:\n",
+                "1. Run the **Installation** cell.\n",
+                "2. Run the **Start Application** cell.\n",
+                "3. Use the application in the window that appears below.\n",
+                "\n",
+                "---\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Step 1: Installation and File Download\n",
+                "import os\n",
+                "print(\"📥 Downloading SRM app files...\")\n",
+                "!wget -q https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/SRM_App/app.py\n",
+                "!wget -q https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/SRM_App/logic.py\n",
+                "!wget -q https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/SRM_App/data.py\n",
+                "\n",
+                "print(\"📦 Installing Streamlit...\")\n",
+                "!pip install -q streamlit\n",
+                "print(\"✅ Setup Complete!\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Step 2: Start Application\n",
+                "from google.colab import output\n",
+                "import subprocess\n",
+                "import time\n",
+                "\n",
+                "# 1. Port settings\n",
+                "PORT = 8501\n",
+                "\n",
+                "# 2. Start Streamlit in the background\n",
+                "print(\"🚀 Starting Streamlit server...\")\n",
+                "# Note: server.address localhost and headless true are critical for Colab\n",
+                "process = subprocess.Popen([\n",
+                "    \"streamlit\", \"run\", \"app.py\", \n",
+                "    \"--server.port\", str(PORT), \n",
+                "    \"--server.address\", \"localhost\", \n",
+                "    \"--server.headless\", \"true\",\n",
+                "    \"--browser.gatherUsageStats\", \"false\"\n",
+                "])\n",
+                "\n",
+                "# 3. Wait for server to initialize\n",
+                "time.sleep(5)\n",
+                "\n",
+                "# 4. Serve the port as an iframe inside the notebook\n",
+                "print(\"✨ SRM Simulation Loading Below...\")\n",
+                "output.serve_kernel_port_as_iframe(PORT, width='100%', height='800')"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "---\n",
+                "## 💡 Pro Tips\n",
+                "- **Fullscreen**: Use the sidebar toggle inside the app to maximize your workspace.\n",
+                "- **Session Stability**: If the iframe is blank, wait a few seconds and run the 'Start Application' cell again.\n",
+                "- **Refresh**: If the simulation gets stuck, you can refresh the cell without reinstalling everything."
+            ]
+        }
+    ],
+    "metadata": {
+        "kernelspec": {
+            "display_name": "Python 3",
+            "language": "python",
+            "name": "python3"
+        },
+        "language_info": {
+            "codemirror_mode": {
+                "name": "ipython",
+                "version": 3
+            },
+            "file_extension": ".py",
+            "mimetype": "text/x-python",
+            "name": "python",
+            "nbconvert_exporter": "python",
+            "pygments_lexer": "ipython3",
+            "version": "3.8.0"
+        }
+    },
+    "nbformat": 4,
+    "nbformat_minor": 4
 }
