feat: add Colab notebook to enable running the SRM Streamlit app with security overrides for Google's proxy system.

--- a/SRM_App/srm_colab.ipynb
+++ b/SRM_App/srm_colab.ipynb
@@ -6,14 +6,14 @@
             "source": [
                 "# 🏭 SAP SRM - Advanced Procurement Simulation\n",
                 "\n",
-                "**Run the Full App directly inside this Notebook**\n",
+                "**High-Robustness Streamlit Runner**\n",
                 "\n",
-                "This method uses Google's native iframe serving. The application will appear directly below the code cell.\n",
+                "This version uses specific security overrides to ensure it loads through Google's proxy system.\n",
                 "\n",
-                "## 🎮 How to Use:\n",
-                "1. Run the **Installation** cell.\n",
-                "2. Run the **Start Application** cell.\n",
-                "3. Use the application in the window that appears below.\n",
+                "## 🎮 Instructions:\n",
+                "1. Run the **Installation** cell below.\n",
+                "2. Run the **Launch App** cell.\n",
+                "3. Wait for the '✨ READY' message—the app will appear below it.\n",
                 "\n",
                 "---\n"
             ]
@@ -24,16 +24,29 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Step 1: Installation and File Download\n",
+                "# Step 1: Installation and File Setup\n",
                 "import os\n",
-                "print(\"📥 Downloading SRM app files...\")\n",
-                "!wget -q https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/SRM_App/app.py\n",
-                "!wget -q https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/SRM_App/logic.py\n",
-                "!wget -q https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/SRM_App/data.py\n",
+                "import requests\n",
+                "\n",
+                "def download_files():\n",
+                "    files = {\n",
+                "        \"app.py\": \"https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/SRM_App/app.py\",\n",
+                "        \"logic.py\": \"https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/SRM_App/logic.py\",\n",
+                "        \"data.py\": \"https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/SRM_App/data.py\"\n",
+                "    }\n",
+                "    \n",
+                "    print(\"📥 Downloading latest app files...\")\n",
+                "    for filename, url in files.items():\n",
+                "        r = requests.get(url)\n",
+                "        with open(filename, 'wb') as f:\n",
+                "            f.write(r.content)\n",
+                "        print(f\"  ✅ {filename} ready\")\n",
+                "\n",
+                "download_files()\n",
                 "\n",
                 "print(\"📦 Installing Streamlit...\")\n",
                 "!pip install -q streamlit\n",
-                "print(\"✅ Setup Complete!\")"
+                "print(\"✅ Environment Setup Complete!\")"
             ]
         },
         {
@@ -42,42 +55,53 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Step 2: Start Application\n",
+                "# Step 2: Launch App with Security Overrides\n",
                 "from google.colab import output\n",
                 "import subprocess\n",
                 "import time\n",
+                "import socket\n",
                 "\n",
-                "# 1. Port settings\n",
                 "PORT = 8501\n",
                 "\n",
-                "# 2. Start Streamlit in the background\n",
-                "print(\"🚀 Starting Streamlit server...\")\n",
-                "# Note: server.address localhost and headless true are critical for Colab\n",
-                "process = subprocess.Popen([\n",
-                "    \"streamlit\", \"run\", \"app.py\", \n",
-                "    \"--server.port\", str(PORT), \n",
-                "    \"--server.address\", \"localhost\", \n",
+                "def is_port_open(port):\n",
+                "    with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as s:\n",
+                "        return s.connect_ex(('localhost', port)) == 0\n",
+                "\n",
+                "# 1. Kill any existing instances\n",
+                "!pkill streamlit\n",
+                "time.sleep(1)\n",
+                "\n",
+                "print(\"🚀 Launching SRM Simulation...\")\n",
+                "\n",
+                "# 2. Start Streamlit with specific flags for Colab compatibility\n",
+                "cmd = [\n",
+                "    \"streamlit\", \"run\", \"app.py\",\n",
+                "    \"--server.port\", str(PORT),\n",
+                "    \"--server.address\", \"localhost\",\n",
                 "    \"--server.headless\", \"true\",\n",
+                "    \"--server.enableCORS\", \"false\",\n",
+                "    \"--server.enableXsrfProtection\", \"false\",\n",
                 "    \"--browser.gatherUsageStats\", \"false\"\n",
-                "])\n",
+                "]\n",
                 "\n",
-                "# 3. Wait for server to initialize\n",
-                "time.sleep(5)\n",
+                "process = subprocess.Popen(cmd, stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
                 "\n",
-                "# 4. Serve the port as an iframe inside the notebook\n",
-                "print(\"✨ SRM Simulation Loading Below...\")\n",
-                "output.serve_kernel_port_as_iframe(PORT, width='100%', height='800')"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "---\n",
-                "## 💡 Pro Tips\n",
-                "- **Fullscreen**: Use the sidebar toggle inside the app to maximize your workspace.\n",
-                "- **Session Stability**: If the iframe is blank, wait a few seconds and run the 'Start Application' cell again.\n",
-                "- **Refresh**: If the simulation gets stuck, you can refresh the cell without reinstalling everything."
+                "# 3. Health check loop\n",
+                "print(\"⏳ Waiting for server to initialize...\")\n",
+                "timeout = 30\n",
+                "start_time = time.time()\n",
+                "while not is_port_open(PORT):\n",
+                "    time.sleep(1)\n",
+                "    if time.time() - start_time > timeout:\n",
+                "        print(\"❌ Timeout waiting for Streamlit to start.\")\n",
+                "        break\n",
+                "\n",
+                "if is_port_open(PORT):\n",
+                "    print(\"✨ SERVER READY!\")\n",
+                "    # 4. Display as iframe\n",
+                "    output.serve_kernel_port_as_iframe(PORT, width='100%', height='800')\n",
+                "else:\n",
+                "    print(\"Please try running this cell again.\")"
             ]
         }
     ],
