--- a/Project_Scheduling_App/scheduler_notebook.ipynb
+++ b/Project_Scheduling_App/scheduler_notebook.ipynb
@@ -10,10 +10,11 @@
                 "\n",
                 "**Instructions:**\n",
                 "1. Run all cells in order\n",
-                "2. Use the visual board to drag tasks to worker lanes\n",
-                "3. Position tasks at specific hours on the timeline\n",
-                "4. Watch for color-coded warnings (red=overlap, orange=precedence, pink=skill mismatch)\n",
-                "5. The makespan updates automatically as you arrange tasks"
+                "2. Choose your difficulty level from the dropdown\n",
+                "3. Use the visual board to drag tasks to worker lanes\n",
+                "4. Position tasks at specific hours on the timeline\n",
+                "5. Watch for color-coded warnings (red=overlap, orange=precedence, pink=skill mismatch)\n",
+                "6. The makespan updates automatically as you arrange tasks"
             ]
         },
         {
@@ -23,9 +24,9 @@
             "outputs": [],
             "source": [
                 "# Download utility module from GitHub if needed\n",
-                "# Uncomment the following lines if you want to download from your public repo:\n",
+                "# Uncomment the following lines if you want to download from your repo:\n",
                 "\n",
-                "# !rm -f jup_util.py  # Remove any existing file\n",
+                "# !rm -f jup_util.py\n",
                 "# !wget -q https://raw.githubusercontent.com/VincentALBoyer/MyStreamlitApp/main/Project_Scheduling_App/jup_util.py"
             ]
         },
@@ -37,7 +38,8 @@
             "source": [
                 "# Import the scheduler utilities\n",
                 "from jup_util import SchedulingLogic, create_scheduler_html\n",
-                "from IPython.display import HTML\n",
+                "from IPython.display import HTML, display\n",
+                "import ipywidgets as widgets\n",
                 "\n",
                 "print(\"✅ Scheduler utilities loaded successfully!\")"
             ]
@@ -48,20 +50,19 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Initialize the scheduler\n",
-                "logic = SchedulingLogic()\n",
-                "print(f\"Tasks: {len(logic.tasks)}\")\n",
-                "print(f\"Workers: {len(logic.workers)}\")"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# Display the interactive scheduler\n",
-                "HTML(create_scheduler_html(logic))"
+                "# Configure and Display the interactive scheduler\n",
+                "difficulty = widgets.Dropdown(\n",
+                "    options=[('Normal (3 Projects)', False), ('🔥 Hard Mode (6 Projects)', True)],\n",
+                "    value=False,\n",
+                "    description='Difficulty:',\n",
+                "    style={'description_width': 'initial'}\n",
+                ")\n",
+                "\n",
+                "def start_simulation(hard_mode):\n",
+                "    logic = SchedulingLogic(hard_mode=hard_mode)\n",
+                "    display(HTML(create_scheduler_html(logic)))\n",
+                "\n",
+                "widgets.interact(start_simulation, hard_mode=difficulty);"
             ]
         },
         {
@@ -71,13 +72,14 @@
                 "## 📝 How to Use This Scheduler\n",
                 "\n",
                 "### Interactive Features:\n",
-                "- **Drag Tasks**: Click and drag tasks from the pool or timeline\n",
-                "- **Drop on Workers**: Place tasks on a worker's lane at specific hours\n",
+                "- **Difficulty Selector**: Switch between Normal and Hard Mode. Hard Mode adds 3 extra projects and expands the timeline to 40h.\n",
+                "- **Drag Tasks**: Click and drag tasks from the pool or timeline.\n",
+                "- **Detailed Tooltips**: Hover over tasks in the pool to see their duration and required skills.\n",
                 "- **Visual Feedback**:\n",
                 "  - 🔴 **Red Background**: Time overlap detected\n",
                 "  - 🟠 **Dashed Border**: Precedence constraint violated\n",
                 "  - 🩷 **Pink Background**: Skill mismatch\n",
-                "- **Makespan**: Updates automatically as you arrange tasks\n",
+                "- **Makespan**: Updates automatically as you arrange tasks.\n",
                 "\n",
                 "### Workers:\n",
                 "- **Alice**: Frontend, Design\n",
@@ -86,19 +88,17 @@
                 "- **Diana**: Testing, Documentation\n",
                 "\n",
                 "### Tips:\n",
-                "1. Start with tasks that have no prerequisites\n",
-                "2. Respect skill requirements (hover to see warnings)\n",
-                "3. Avoid overlapping tasks on the same worker\n",
-                "4. Consider precedence constraints (some tasks must complete before others)\n",
-                "5. Try to minimize the makespan!\n",
+                "1. Start with tasks that have no prerequisites.\n",
+                "2. Respect skill requirements (hover to see warnings).\n",
+                "3. Avoid overlapping tasks on the same worker.\n",
+                "4. Hard Mode requires much more careful resource planning over a 40-hour window!\n",
                 "\n",
                 "---\n",
                 "\n",
                 "**To run in Google Colab:**\n",
-                "1. Upload this notebook or access it from your GitHub repo\n",
-                "2. Uncomment the first cell to download `jup_util.py` from your repo\n",
-                "3. Run all cells\n",
-                "4. Start scheduling!\n"
+                "1. Upload this notebook and `jup_util.py` to your environment.\n",
+                "2. Run all cells.\n",
+                "3. Start scheduling!\n"
             ]
         }
     ],
